Finsihed with my userpage

--- a/Public/html/userPage.html
+++ b/Public/html/userPage.html
@@ -16,7 +16,7 @@
     <header>
         <div id="logo">
             <div id="lCont">
-                <a href="index.html">
+                <a href="/Public/index.html">
                     <h1 id="logoText"><span id="t">T</span><span id="c">C</span><span id="a">A</span></h1>
                 </a>
 
@@ -51,7 +51,96 @@
         </nav>
 
     </header>
-    <main>
+    <main class="main">
+        <section class="sidenav" id="pInfo">
+            <div class="card">
+                <h6>Account Information</h6>
+                <div class="image-wrapper">
+                    <img src="../img/login_icon.png" alt="Profile Image" class="smaller-image">
+
+                </div>
+                <ul>
+                    <li>
+                        <span> Profile Name</span>
+                    </li>
+                    <li>
+                        <span> Profile Description</span>
+                    </li>
+                    <li>
+                        <span>Profile Location</span>
+                    </li>
+                    <li>
+
+                        <span>Profile Age</span>
+                    </li>
+                </ul>
+
+            </div>
+        </section>
+        <section class="sidenav" id="menu">
+            <div class="card links">
+                <h4>Menu</h4>
+                <ul>
+                    <li>
+                        <a href="#" class="active"><i class="fas fa-comment user"></i> <span>Chats</span> </a>
+
+                    </li>
+                    <li>
+                        <a href="#"><i class="fas fa-user-friends user"></i> <span>Friends</span> </a>
+
+                    </li>
+                    <li>
+                        <a href="#"><i class="fas fa-user-clock user"></i> <span>Friend Requests</span> </a>
+
+                    </li>
+                    <li>
+                        <a href="#"><i class="fas fa-user-plus user"></i> <span>Add Friend</span> </a>
+
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section id="content" class="card">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Cras justo
+                    <span class="badge badge-primary badge-pill">14</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    facilisis in
+                    <span class="badge badge-primary badge-pill">2</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    leo risus
+                    <span class="badge badge-primary badge-pill">1</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Cras justo
+                    <span class="badge badge-primary badge-pill">14</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Dapibus ac facilisis in
+                    <span class="badge badge-primary badge-pill">2</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Morbi risus
+                    <span class="badge badge-primary badge-pill">1</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Cras justo
+                    <span class="badge badge-primary badge-pill">14</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Dapibus facili
+                    <span class="badge badge-primary badge-pill">2</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Morbi risus
+                    <span class="badge badge-primary badge-pill">1</span>
+                </li>
+            </ul>
+        </section>
+
     </main>
     <footer>
         <p>&copy; Tokyo 2020</p>
