--- a/Public/html/chatPage.html
+++ b/Public/html/chatPage.html
@@ -100,55 +100,22 @@
                 </ul>
             </div>
         </section>
-        <section id="content" class="card">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <a href="chatPage.html" class="chats"><img src="../img/login_icon.png" alt="..."
-                            class="profile-img"> Cras
-                        justo</a>
-                    <span class="badge badge-primary badge-pill">14</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <a href="chatPage.html" class="chats"><img src="../img/login_icon.png" alt="..."
-                            class="profile-img"> facilisis
-                        in</a>
-                    <a href="chatPage.html"><span class="badge badge-primary badge-pill">2</span></a>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <a href="chatPage.html" class="chats"><img src="../img/login_icon.png" alt="..."
-                            class="profile-img"> leo
-                        risus</a>
-                    <span class="badge badge-primary badge-pill">1</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
+        <section id="content" class="card" style="padding: 0; background: rgb(248, 226, 226);">
+            <div class="well">
+                <div id="wellHeader">
+                    <img src="../img/login_icon.png" alt="..." class="profile-img" style="border: 1px solid
+                    white;">
+                    Cras
+                    justo<a href="" id="back"><i class="fas fa-arrow-alt-circle-left"></i></a>
+                </div>
 
-                    <a href="chatPage.html" class="chats"><img src="../img/login_icon.png" alt="..."
-                            class="profile-img"> Cras
-                        justo</a>
-                    <span class="badge badge-primary badge-pill">14</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <a href=""><img src="../img/login_icon.png" alt="..." class="profile-img"> Dapibus ac facilisis
-                        in</a>
-                    <span class="badge badge-primary badge-pill">2</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <a href=""><img src="../img/login_icon.png" alt="..." class="profile-img">Morbi risus </a>
-                    <a href=""><span class="badge badge-primary badge-pill">1</span></a>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <a href=""><img src="../img/login_icon.png" alt="..." class="profile-img"> Cras justo</a>
-                    <a href=""><span class="badge badge-primary badge-pill">14</span></a>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <a href=""><img src="../img/login_icon.png" alt="..." class="profile-img"> Dapibus facili</a>
-                    <a href=""><span class="badge badge-primary badge-pill">2</span></a>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <a href=""><img src="../img/login_icon.png" alt="..." class="profile-img"> Morbi risus</a>
-                    <a href=""><span class="badge badge-primary badge-pill">1</span></a>
-                </li>
-            </ul>
+                <p class="msgIn">Hi</p>
+
+                <p class="msgOut">Hello</p>
+                <p class="msgOut">Hello</p>
+                <p class="msgOut">Hello</p>
+                <p class="msgIn">Hi</p>
+            </div>
         </section>
 
     </main>
